# pyxis

./: .dockerignore  .env.dev  .env.prod  .gitignore  Cargo.toml  README.md  dockerfile  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
crates/pyxis-app/: Cargo.toml  tauri.conf.json
crates/pyxis-app/capabilities/: default.json  prevent-default.json
crates/pyxis-app/icons/: icon.icns
crates/pyxis-app/src/: database.rs  handlers.rs  hooks.rs  main.rs  migrations.rs  sidecar.rs
crates/pyxis-app/src/entities/: queue.rs  updates.rs  workspaces.rs
crates/pyxis-app/src/handlers/: config.rs  devices.rs  directories.rs  files.rs  snapshots.rs  tracker.rs  updates.rs  workspaces.rs
crates/pyxis-app/src/hooks/: directories.rs  files.rs  listener.rs  snapshots.rs  updates.rs  workspaces.rs
crates/pyxis-app/src/migrations/: config.rs  devices.rs  directories.rs  files.rs  listener_queue.rs  snapshots.rs  tracker.rs  updates.rs  workspaces.rs
crates/pyxis-auth/: .env  Cargo.toml
crates/pyxis-auth/src/: database.rs  main.rs
crates/pyxis-auth/src/server/: middlewares.rs  router.rs  sign_up.rs
crates/pyxis-server/: Cargo.toml
crates/pyxis-server/src/: database.rs  dynamo_client.rs  main.rs  server.rs  sns_client.rs
crates/pyxis-server/src/database/: documents_repository.rs  features_repository.rs  token_repository.rs  updates_repository.rs  user_repository.rs
crates/pyxis-server/src/server/: auth.rs  middlewares.rs  router.rs  sign_in.rs  sign_out.rs  sync.rs
crates/pyxis-server/src/server/auth/: get_devices.rs  sign_in.rs  sign_out.rs  sign_up.rs  subscription_get.rs  subscription_modify.rs  subscription_request.rs
crates/pyxis-server/src/server/middlewares/: auth.rs  sync_check.rs
crates/pyxis-server/src/server/sync/: document_list.rs  document_write.rs  ping.rs  updates_list.rs  updates_write.rs
crates/pyxis-sync/: Cargo.toml  build.rs
crates/pyxis-sync/src/: main.rs  sync_worker.rs  writer.rs
crates/pyxis-sync/src/sync_worker/: sync.rs  workspaces.rs
crates/pyxis-sync/src/writer/: document_writer.rs  sync_writer.rs  update_writer.rs
crates/pyxis_db/: Cargo.toml
crates/pyxis_db/src/: database.rs  entities.rs  lib.rs  payload.rs
crates/pyxis_db/src/entities/: config.rs  devices.rs  directories.rs  files.rs  queue.rs  snapshots.rs  tracker.rs  updates.rs  workspaces.rs
crates/pyxis_shared/: Cargo.toml
crates/pyxis_shared/src/: database.rs  entities.rs  lib.rs  payload.rs  utils.rs
crates/pyxis_shared/src/entities/: config.rs  devices.rs  directories.rs  files.rs  queue.rs  snapshots.rs  tracker.rs  workspaces.rs
crates/pyxis_shared/src/utils/: get_machine_id.rs
