[package]
name = "pyxis-app"
version = "0.1.2"
description = "A Tauri App"
authors = ["Abhishek Kumar"]
license = ""
repository = ""
default-run = "pyxis-app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.1", features = ["devtools"] }
dirs = "5.0"
nanoid = "0.4.0"
rusqlite = { version = "0.32.1", features = ["hooks"] }
chrono = "0.4.31"
tauri-plugin-dialog = "2.0.1"
uuid = { version = "1.11.0", features = ["v4", "v5", "serde"] }
machineid-rs = "1.2.4"
serde_with = "3.0.0"
pyxis_shared = { path = "../pyxis_shared" }
tauri-plugin-shell = "2.0.0-alpha.2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"

# [features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
# custom-protocol = [ "tauri/custom-protocol" ]
