[package]
name = "pyxis-server"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1.12", features = ['full'] }
futures = "0.3.6"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"]}
axum = "0.7.9"
jsonwebtoken = "9.3.0"
serde = "1.0.215"
serde_with = { version = "3.11.0", features = ["chrono"]}
pwhash = "1.0.0"
axum-macros = "0.4.2"
aws-sdk-dynamodb = "1.55.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
dotenv = "0.15.0"
pyxis_shared = { path = "../pyxis_shared" }
serde_json = "1.0.134"
aws-sdk-sns = "1.55.0"
