[package]
name = "pyxis-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.12"
aws-sdk-dynamodb = "1.57.0"
serde = "1.0.217"
tokio = "1.42.0"
pyxis_db = { path = "../pyxis_db" }
rusqlite = { version = "0.32.1", features = ["hooks"] }
serde_json = "1.0.134"
reqwest = "0.12.12"
